added basic Model classes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,8 +32,19 @@ play.i18n.langs = [ "en" ]
 #
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+#db.default.url="jdbc:mysql://localhost/foo_db"
+#db.default.username=root
+#db.default.password=""
+
+# Ebean
+# ~~~~~
+# Added configuration options to get Ebean working
+#
+ebean.default=["models.*"]
+#applyEvolutions.default=true
+db.default.jndiName=DefaultDS
+
+jpa.default=defaultPersistenceUni
 
 # Evolutions
 # ~~~~~
