--- a/bin/application.conf
+++ b/bin/application.conf
@@ -30,10 +30,21 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+db.default.url="jdbc:mysql://localhost/foo_db"
+db.default.username=root
+db.default.password=""
+
+# Ebean
+# ~~~~~
+# Added configuration options to get Ebean working
+#
+ebean.default=["models.*"]
+#applyEvolutions.default=true
+db.default.jndiName=DefaultDS
+
+jpa.default=defaultPersistenceUni
 
 # Evolutions
 # ~~~~~
